# axiom-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  npm-publish.yml  release.yml
artifacts/: render_v1_rc_launch.py
crates/axiom-agent/: Cargo.toml
crates/axiom-agent/src/: cancellation.rs  caps.rs  context.rs  ledger.rs  lib.rs  loop_controller.rs  todo.rs
crates/axiom-cli/: Cargo.toml
crates/axiom-cli/src/: chat.rs  code_commands.rs  cost_commands.rs  credentials.rs  identity.rs  main.rs  onboarding.rs  proof_commands.rs  side_effects.rs  skill_commands.rs  startup.rs  update_commands.rs
crates/axiom-cli/src/ui/: mod.rs  render.rs
crates/axiom-coder/: Cargo.toml
crates/axiom-coder/src/: checkpoint.rs  guard.rs  lib.rs  patch.rs  planner.rs  project_scan.rs  test_runner.rs
crates/axiom-core/: Cargo.toml
crates/axiom-core/src/: atomic.rs  child_process.rs  config.rs  cost.rs  errors.rs  lib.rs  session.rs  workspace.rs
crates/axiom-engine/: Cargo.toml
crates/axiom-engine/src/: executor.rs  installed.rs  lib.rs  lifecycle.rs  manifest.rs  permissions.rs  policy.rs  registry.rs  updater.rs
crates/axiom-lens/: Cargo.toml
crates/axiom-lens/src/: coder_route.rs  intent.rs  lib.rs  prompt_builder.rs  ranker.rs
crates/axiom-llm/: Cargo.toml
crates/axiom-llm/src/: cloudflare_gateway.rs  lib.rs  limits.rs  mock.rs  openai_compat.rs  openai_format.rs  provider.rs  streaming.rs  types.rs
crates/axiom-proof/: Cargo.toml
crates/axiom-proof/src/: export.rs  lib.rs  recorder.rs  redaction.rs  report.rs  storage.rs  trace.rs
crates/axiom-update/: Cargo.toml
crates/axiom-update/src/: checksum.rs  github_release.rs  installer.rs  lib.rs  platform.rs  state.rs  version.rs
docs/: ARCHITECTURE.md  AUTO_UPDATE.md  CLOUDFLARE_AI_GATEWAY.md  CODING_AGENT.md  CODING_MODE.md  DEMO.md  INSTALLATION.md  PHASE1_PLAN.md  PRD.md  PROOF_MODE.md  PROVIDERS.md  RELEASE.md  RELEASE_NOTES.md  ROADMAP.md  SKILLS.md  SKILL_LENS.md  SKILL_LIFECYCLE.md  SKILL_REGISTRY.md  TESTING.md  THREAT_MODEL.md  UPDATER.md  V0_1_RELEASE_CHECKLIST.md  V0_5_BETA_RELEASE_CHECKLIST.md  V1_PLAN.md  V1_RC_CHECKLIST.md
fixtures/skill-registry/: registry.json
fixtures/skill-registry/skills/file.read/: skill.toml
fixtures/skill-registry/skills/file.write/: skill.toml
fixtures/skill-registry/skills/git.diff/: skill.toml
fixtures/skill-registry/skills/git.status/: skill.toml
fixtures/skill-registry/skills/project.scan/: skill.toml
fixtures/skill-registry/skills/python.run/: skill.toml
fixtures/skill-registry/skills/python.write/: skill.toml
fixtures/skill-registry/skills/shell.bash.safe/: skill.toml
fixtures/skill-registry/skills/shell.powershell.safe/: skill.toml
fixtures/skill-registry/skills/shell.zsh.safe/: skill.toml
fixtures/skill-registry/skills/web.fetch/: skill.toml
scripts/: check-dist-tag.js  check-publish-readiness.js  check-version-sync.js  download-binary.js  e2e-test.js  packed-install-smoke.js  postinstall.js  release-check.js  resolve-platform.js  security-check.js  smoke-test.js  verify-checksum.js
skills/file_read_text/: README.md  skill.toml
skills/file_write_text/: README.md  skill.toml
skills/project_scan/: README.md  skill.toml
skills/shell_run_safe/: README.md  skill.toml
skills/web_fetch/: README.md  skill.toml
