[workspace]
members = [
    "crates/axiom-cli",
    "crates/axiom-core",
    "crates/axiom-llm",
    "crates/axiom-engine",
    "crates/axiom-lens",
    "crates/axiom-coder",
    "crates/axiom-proof",
    "crates/axiom-update",
]
resolver = "2"

[workspace.package]
version = "0.5.0-beta"
edition = "2021"
license = "MIT"
authors = ["Axiom Agent Contributors"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
