[workspace]
members = [
    "crates/axiom-cli",
    "crates/axiom-core",
    "crates/axiom-llm",
    "crates/axiom-engine",
    "crates/axiom-lens",
    "crates/axiom-coder",
    "crates/axiom-proof",
    "crates/axiom-update",
    "crates/axiom-agent",
]
resolver = "2"

[workspace.package]
version = "1.0.0-rc.1"
edition = "2021"
license = "MIT"
authors = ["Axiom Agent Contributors"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7.4"
rustyline = { version = "18.0", features = ["with-file-history"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tiktoken-rs = "0.12"
tokio = { version = "1.39", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
nu-ansi-term = "0.50"
