[package]
name = "axiom-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axiom-engine = { path = "../axiom-engine", version = "=1.0.0-rc.1" }
axiom-llm = { path = "../axiom-llm", version = "=1.0.0-rc.1" }
serde.workspace = true
serde_json.workspace = true
tiktoken-rs.workspace = true
tokio.workspace = true

[dev-dependencies]
async-trait.workspace = true
