[package]
name = "axiom-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "axiom"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axiom-coder = { path = "../axiom-coder" }
axiom-core = { path = "../axiom-core" }
axiom-engine = { path = "../axiom-engine" }
axiom-lens = { path = "../axiom-lens" }
axiom-llm = { path = "../axiom-llm" }
axiom-proof = { path = "../axiom-proof" }
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
