[package]
name = "axiom-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "axiom"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axiom-agent = { path = "../axiom-agent", version = "=1.0.0-rc.1" }
axiom-coder = { path = "../axiom-coder", version = "=1.0.0-rc.1" }
axiom-core = { path = "../axiom-core", version = "=1.0.0-rc.1" }
axiom-engine = { path = "../axiom-engine", version = "=1.0.0-rc.1" }
axiom-lens = { path = "../axiom-lens", version = "=1.0.0-rc.1" }
axiom-llm = { path = "../axiom-llm", version = "=1.0.0-rc.1" }
axiom-proof = { path = "../axiom-proof", version = "=1.0.0-rc.1" }
axiom-upd = { package = "axiom-update", path = "../axiom-update", version = "=1.0.0-rc.1" }
clap.workspace = true
nu-ansi-term.workspace = true
rpassword.workspace = true
rustyline.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(windows)'.dependencies]
keyring = { version = "3.6", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", features = ["apple-native"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
keyring = { version = "3.6", features = ["crypto-rust", "sync-secret-service", "vendored"] }
