[package]
name = "axiom-coder"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axiom-core = { path = "../axiom-core", version = "=1.0.0-rc.1" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
