[package]
name = "axiom-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axiom-core = { path = "../axiom-core" }
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
