[package]
name = "axiom-update"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "axiom_upd"
path = "src/lib.rs"

[dependencies]
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
